--- a/src/components/todoList/todo.page.scss
+++ b/src/components/todoList/todo.page.scss
@@ -1,9 +1,10 @@
-.todoPage{
+.todo-page{
     display: flex;
     height: 100vh;
     justify-content: center;
     align-items: center;
-    .todoBody{
+
+    .todo-body{
         min-width: 350px;
         padding: 1%;
         background-color: rgba(118, 130, 240, 0.438);
@@ -11,7 +12,8 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        .todoList{
+
+        .todo-list{
             width: 100%;
             display: flex;
             flex-direction: row;
@@ -22,7 +24,8 @@
             &:hover{
                 background-color: rgba(116, 123, 201, 0.438); 
             }
-            .todoTitle{
+
+            .todo-title{
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -30,28 +33,35 @@
                 font-weight: 600;
                 letter-spacing: 1px;
             }
-            .checkboxTodoList{
+
+            .checkbox-todo-list{
                 zoom: 1.5;
                 cursor: pointer;
             }
-            .CloseIcon, .EditIcon{
+
+            .close-icon, .edit-icon{
                 cursor: pointer;                
             }
-            .CloseIcon{
+
+            .close-icon{
                 margin-left: 5%;
+
                 :hover{
                     color: red;
                     transition: 0.2s;
                 }
             }
-            .EditIcon{
+            
+            .edit-icon{
+
                 :hover{
                     color: rgba(33, 41, 136, 0.774);
                     transition: 0.2s;
                 }
             }
         }
-        .addTodoButton{
+        
+        .add-todo-button{
             background-color: rgba(116, 123, 201, 0.911);
             margin-top: 2%;
         }
